Fix scrollbar styling for product items (#178)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,8 @@
 
 @layer utilities {
   .no-scroll-bar {
+    scrollbar-width: none;
+
     &::-webkit-scrollbar {
       @apply hidden;
     }
